<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/radio_water"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/radio_calories"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sleep"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:layout_gravity="start"
        android:orientation="vertical">

        <EditText
            android:id="@+id/calories"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:hint="@string/edit_calories"/>

        <EditText
            android:id="@+id/time"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/edit_time" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/button_enter"
            android:gravity="center"
            android:layout_gravity="start"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:onClick="enter" />

        <Button
            android:id="@+id/menuButton"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/button_menu"
            android:gravity="center"
            android:layout_gravity="start"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="120dp"
            android:onClick="menu" />

    </LinearLayout>
</LinearLayout>
