<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/healthInfoButton"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/button_healthInfo"
            android:gravity="center_horizontal|center"
            android:onClick="enterHealthInfo" />
        <Button
            android:id="@+id/goalsButton"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/button_goals"
            android:gravity="center_horizontal|center"
            android:onClick="goals" />
        <Button
            android:id="@+id/comparisonButton"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/button_comparison"
            android:gravity="center_horizontal|center"
            android:onClick="comparison" />

    </LinearLayout>
</LinearLayout>
