<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/radio_water"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/radio_calories"
            android:onClick="onRadioButtonClicked"
            android:checked="true" />
        <RadioButton android:id="@+id/radio_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sleep"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/calories"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:hint="Calories consumed per day"
            android:inputType="time" />

        <EditText
            android:id="@+id/time"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="time"
            android:hint="Meals/snacks per day" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/property3"
            android:layout_weight="0.09"
            android:hint="Time since last meal (in hours)"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:inputType="time" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:text="@string/button_enter"
            android:gravity="center"
            android:layout_gravity="start"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="50dp"
            android:onClick="enter"
            android:background="@android:color/black"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/menuButton"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:text="Main Menu"
            android:gravity="center"
            android:layout_gravity="start"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="50dp"
            android:onClick="menu"
            android:background="@android:color/black"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
